fix: text-align :center;を削除しました

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 body{
     background-color: green;
-    text-align: center;
     font-weight: bold;
 }
